@@ -19,6 +19,9 @@
    - markus@cvs.openbsd.org 2003/08/22 20:55:06
      [LICENCE]
      add Simon Wilkinson
+   - deraadt@cvs.openbsd.org 2003/08/24 17:36:52
+     [monitor.c monitor_wrap.c sshconnect2.c]
+     64 bit cleanups; markus ok
  - (dtucker) [Makefile.in acconfig.h auth-krb5.c auth-pam.c auth-pam.h
    configure.ac defines.h gss-serv-krb5.c session.c ssh-gss.h sshconnect1.c
    sshconnect2.c] Add Portable GSSAPI support, patch by Simon Wilkinson.
@@ -894,4 +897,4 @@
  - Fix sshd BindAddress and -b options for systems using fake-getaddrinfo.
    Report from murple@murple.net, diagnosis from dtucker@zip.com.au
 
-$Id: ChangeLog,v 1.2911 2003/08/26 02:09:53 dtucker Exp $
+$Id: ChangeLog,v 1.2912 2003/08/26 02:10:48 dtucker Exp $
